--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,18 +38,18 @@ jobs:
       - name: Build APK
         run: flutter build apk
 
-        #8 Build IPA ( IOS Build )
-      - name: Build IPA
-        run: flutter build ipa --no-codesign
+      #8 Build IPA ( IOS Build )
+      # - name: Build IPA
+      #   run: flutter build ipa --no-codesign
 
-      - name: Compress Archives and IPAs
-        run: |
-          cd build
-          tar -czf ios_build.tar.gz ios
+      # - name: Compress Archives and IPAs
+      #   run: |
+      #     cd build
+      #     tar -czf ios_build.tar.gz ios
 
         # Build web
       - name: Build web
-        run: flutter build web
+        run: flutter build web --base-href /${{ github.event.repository.name }}/
       
       - name: Updage pages artifacts
         uses: actions/upload-pages-artifact@v3
@@ -63,7 +63,6 @@ jobs:
           name: Releases
           path: |
             build/app/outputs/flutter-apk/app-release.apk
-            build/ios_build.tar.gz
   deploy:
     needs: build
     permissions:
