--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,9 +60,9 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Releases
-          path: |
-            build/app/outputs/flutter-apk/app-release.apk
+          name: Release
+          path: build/app/outputs/flutter-apk/app-release.apk
+          
   deploy:
     needs: build
     permissions:
